[gd_scene load_steps=2 format=3 uid="uid://nrvwm1v463l"]

[ext_resource type="Script" path="res://Assets/Utility/DamageBoxes/damage_box.gd" id="1_7h0cy"]

[node name="DamageBox" type="Area2D"]
script = ExtResource("1_7h0cy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AttackSpeedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="AttackSpeedTimer" to="." method="_on_attack_speed_timer_timeout"]
